force-app/main/default/objects/Decision__c/fields/Open_Point__c.field-meta.xml
<CustomField>
    <fullName>Open_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Point</label>
    <referenceTo>OpenPoint__c</referenceTo>
    <relationshipLabel>Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>