force-app/main/default/objects/Decision__c/fields/Project_Review__c.field-meta.xml
<CustomField>
    <fullName>Project_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Review</label>
    <referenceTo>ProjectReview__c</referenceTo>
    <relationshipLabel>Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>