force-app/main/default/objects/Decision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>DecisionMaker__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>